--- a/src/App.css
+++ b/src/App.css
@@ -96,6 +96,26 @@ nav .logo-btn .btn {
  .links li a:hover:after{
   left: 0;
 } 
+.cart{
+  position: relative;
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+  align-self: center;
+}
+.cart span{
+  position: absolute;
+  top: -10px;
+  right: -12px;
+  background: crimson;
+  padding: 1px;
+  border-radius: 50%;
+  text-align: center;
+  width: 18px;
+  height: 24px;
+  font-weight: bold;
+  z-index: 1;
+}
+
  .carta{
   display: none;
 }  
@@ -203,3 +223,63 @@ nav .logo-btn .btn {
  
  }
  
+ /* About CSS */
+ .about{
+   margin: 20px;
+ }
+ .about-img{
+   width: 100%;
+ }
+  .about-img img{
+    width: 100%;
+    display: block;
+  }
+  .about-info p{
+    font-size:18px;
+  }
+  @media screen and (min-width:664px){
+    .about-center{
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+    .about-img{
+      flex:0 0 calc(40% - 5px);
+    }
+    .about-info{
+      flex:0 0 calc(60% - 5px);
+    }
+  }
+.about-info p{
+  font-size: 18px;
+}
+.btn-options button{
+  margin: 10px 10px;
+  width: 160px;
+  padding: 5px 5px;
+  font-size: 16px;
+  cursor: pointer;
+  outline: none;
+  background: transparent;
+  border: 1px solid rgb(10, 200, 255);
+  color: rgb(80, 80, 80);
+  transition:all 0.3s ease-in-out;
+  text-transform: capitalize;
+}
+.btn-options button:hover{
+  background:  rgb(80, 80, 80);
+  color: rgb(255, 255, 255);
+  border: 1px solid  rgb(80, 80, 80);;
+}
+@media screen and (min-width:664px){
+  .about-center{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .about-img{
+    flex:0 0 calc(40% - 5px);
+  }
+}
+
+/* About CSS ends */
