--- a/src/App.css
+++ b/src/App.css
@@ -228,14 +228,16 @@ nav .logo-btn .btn {
    margin: 20px;
  }
  .about-img{
-   width: 100%;
+   width: 100%; 
+   
  }
   .about-img img{
     width: 100%;
     display: block;
   }
   .about-info p{
-    font-size:18px;
+    font-size:18px; 
+ 
   }
   @media screen and (min-width:664px){
     .about-center{
@@ -280,6 +282,18 @@ nav .logo-btn .btn {
   .about-img{
     flex:0 0 calc(40% - 5px);
   }
+  .about-info{
+    flex:0 0 calc(60% - 5px);
+  }
 }
 
 /* About CSS ends */
+
+/* Products CSS starts */
+.products{
+  width: 100%;
+}
+.products h2{
+  text-align: center;
+  margin: 20px;
+}
