--- a/src/App.css
+++ b/src/App.css
@@ -18,11 +18,11 @@ a{
   margin: 0 auto;
   padding: 12px;
 }
-/* .sticky {
+.sticky {
   position: sticky;
   top: 0;
   z-index: 10;
-} */
+} 
 nav .logo-btn {
   display: flex;
   justify-content: space-between;
@@ -295,5 +295,113 @@ nav .logo-btn .btn {
 }
 .products h2{
   text-align: center;
-  margin: 20px;
+  margin: 20px 0;
+  letter-spacing: 0.3rem;
+  font-weight: 400px;
+  color: rgb(0, 0, 0);
+  text-decoration: solid rgb(0, 0, 0) 2px;
+}
+.products-center{
+ padding: 10px;
+ max-width: 1100px;
+ margin: 0 auto;
+}
+.product{
+  box-shadow:1px 1px 4px 1px rgba(70, 61, 61, 0.5);
+  margin: 0 auto;
+  margin-bottom: 20px;
+  transition: all 0.3s ease-in-out;
+}
+.product:hover{
+  box-shadow: 1px 1px 8px 1px rgba(70, 61, 61, 0.5);
+}
+.product img{
+  display: block;
+  width: 70%;
+  margin: 0 auto;
+  transition: all 0.3s ease-in-out;
+}
+.img div { 
+  background: rgb(241, 239, 239);
+}
+.product .details{
+  padding: 10px;
+  border-top: 1px solid rgb(236, 230, 230);
+  text-align: center;
+}
+.details h3{
+  color: rgb(10, 10, 10);
+  letter-spacing : 0.1rem;
+ 
+}
+.details h4{
+  color: rgb(73, 29, 29);
+  padding: 10px 0;
+  font-weight: bold;
+}
+.details button{
+  width: 100%;
+  padding: 10px 10px;
+  font-size: 16px;
+  outline:none ;
+  border: none;
+  background: rgb(172, 171, 174);
+  transition: all 0.3s ease-in-out;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.img-div {
+  position: relative;}
+  .img-div:hover img{
+  transform: scale(1.05);}
+ @media screen and (min-width:570px){
+  .products-center{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .product{
+    flex:0 0 calc(50% - 20px);
+    margin-bottom: 20px;
+  }
+  
+ } 
+ @media screen and (min-width:870px){
+  .products-center{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .product{
+    flex:0 0 calc(33% - 20px);
+    margin-bottom: 0 auto;
+    margin-bottom: 10px;
+  }
+  
+ }
+ @media screen and (min-width:970px){
+  
+  .product{
+    flex:0 0 calc(33% - 20px);
+    margin-bottom: 0 auto;
+    margin-bottom: 20px;
+  }
+  
+ }
+
+/* Products CSS ends */
+/* Cart  */
+.cartItem{
+  background-color:rgb(54, 51, 51) ;
+  z-index: 10;
+
+}
+.inside-btn{
+  background: rgb(241, 239, 239);
+  display: inline-block;
+  margin: 10px 0;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease-in-out;
 }
