--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,37 @@ nav .logo-btn .btn {
  .carta{
   display: none;
 }  
-
+.itemCart{
+  position: relative;
+}
+.itemCart span{
+  position: absolute;
+  top: -10px;
+  right: 0px;
+  background: crimson;
+  padding:0px 1px;
+  border-radius: 50%;
+  text-align: center;
+  }
+  .cartNav{
+    background: rgb(115, 111, 118);
+    position: fixed;
+    top: 54px;
+    bottom: o;
+    right:-100%;
+    width: 100%;
+    transition: 0.5s;
+    border: gray;
+  }
+  .newCartNav{
+    background: rgb(115, 111, 118);
+    position: fixed;
+    top: 54px;
+    bottom: 0;
+    right: 0;
+    width: 100px;
+    border: gray;
+  }
 
 @media screen and (min-width:664px){
   nav .logo-btn{
@@ -207,7 +237,7 @@ nav .logo-btn .btn {
   
  }
  
- .cart span{
+ .carta span{
    position: absolute;
    top:-10px;
    right:-7px;
@@ -390,7 +420,7 @@ nav .logo-btn .btn {
 /* Products CSS ends */
 /* Cart  */
 .cartItem{
-  background-color:rgb(54, 51, 51) ;
+  background-color:rgb(128, 121, 121) ;
   z-index: 10;
 
 }
@@ -405,3 +435,139 @@ nav .logo-btn .btn {
   align-items: center;
   transition: all 0.3s ease-in-out;
 }
+.inside-btn:hover{
+  background: rgb(172, 171, 174);
+}
+.img-cart{
+  display: inline-block;
+  width: 100%;
+  background: rgb(241, 239, 239);
+  /* border-radius:10%; */
+}
+.img-cart img{
+  width: 70px;
+  height: 70px;
+  text-align: center;
+  display: block;
+}
+/* This is to chage the position of the cart */
+.cart-center{ 
+ position: relative;
+ display: grid;
+ grid-template-columns: repeat(1, 1fr);
+ text-align: left;
+ align-items: center;
+ gap: 15px;
+ padding: 5px 15px;
+}
+
+.item-cart p{
+  font-size: 20px;
+}
+
+.inc-dec-cart{
+  display: flex;
+}
+.inc-dec-cart button{
+  background: rgb(154, 144, 144);
+ padding: 3px 5px;
+ outline: none;
+ border: 1px solid transparent;
+
+}
+.inc-dec-cart button:hover{
+  background: rgb(172, 171, 174);
+  border: 1px solid rgb(172, 171, 174);
+  color: rgb(76, 73, 83);
+}
+.price-cart{
+  color:rgb(151, 27, 27);
+  font-weight: 700;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-top: 5px;
+}
+.del-item {
+  right: 0px;
+  margin-top: 5px;
+  cursor: pointer; 
+}
+.del-item:hover{
+  color: crimson;
+}   
+.extra-info{
+ 
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+}
+.extra-info h3{
+  font-size: 20px;
+  letter-spacing: 0.1rem;
+}
+.extra info h3 span{
+  font-size: 18px;
+  text-transform: capitalize;
+}
+.payment{
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+}
+.payment a{
+ border : 1px solid rgb(218, 214, 214);
+ display: inline-block;
+ width: 150px;
+ padding: 5px 10px;
+ margin-top: 20px;
+ color: rgb(0, 0, 0);
+ background: rgb(241, 239, 239);
+ font-size: 16px;
+ text-align: center;
+ transition: all 0.3s ease-in-out;
+}
+.payment h3 span{
+  font-size: 18px;
+  text-transform: capitalize;
+}
+.payment a:hover{
+  background: rgb(172, 171, 174);
+  border: 1px solid rgb(172, 171, 174);
+}
+.empty{
+  background: red;
+}
+.noname{
+  background: green;
+}
+/* Home CSS */
+.header{
+  width : 100%;
+  background: url('./img/shoes2.jpg');
+  min-height: 90vh;
+  display: flex;
+  justify-content: center;
+}
+.header-info{
+  padding: 10px;
+  text-align: center;
+  margin-top: 10px;
+
+}
+ .header-info h1{
+  font-size: 40px;
+  letter-spacing: 0.2rem;
+ }
+ .header-info p{
+  font-size: 20px;
+  letter-spacing: 0.2rem;
+ }
+ @media screen and (min-width:664px){
+  .header {
+    width:100%;
+    background: url('./img/shoes2.jpg');
+  }
+  .header-info h1{
+    font-size: 55px;
+  }
+  
+ }
