--- a/src/App.css
+++ b/src/App.css
@@ -267,6 +267,7 @@ nav .logo-btn .btn {
   }
   .about-info p{
     font-size:18px; 
+    text-align: justify;
  
   }
   @media screen and (min-width:664px){
